--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,14 +12,14 @@
     <body>
         <header id="header">
             <div class="headerWrapper">
-                <nav>
+                <nav class="left">
                     <ul>
                       <li><a href="#home" onclick="scrollToSection(event)">INICIO</a></li>
                       <li><a href="#horario" onclick="scrollToSection(event)">HORARIO</a></li>
                     </ul>
                   </nav>
                   <img src="media/logo_s.png" alt="La Huella">
-                  <nav>
+                  <nav class="right">
                     <ul>
                       <li><a href="#menu" onclick="scrollToSection(event)">MENÚ</a></li>
                       <li><a href="#contacto" onclick="scrollToSection(event)">CONTACTO</a></li>
@@ -40,16 +40,11 @@
                   <div class="left">
                   </div>
                   <div class="right">
-                    <h1>Horarios</h1>
-                    <span>Lunes: 12 a 16:30 | 20 a 0h</span>
-                    <span>Martes: 12 a 16:30 | 20 a 0h</span>
-                    <span>Miércoles: Cerrado</span>
-                    <span>Jueves: 12 a 16:30 | 20 a 0h</span>
-                    <span>Viernes: 12 a 16:30 | 20 a 0h</span>
-                    <span>Sábado: 12 a 16:30 | 20 a 0h</span>
-                    <span>Domingo: 12 a 16:30 | 20 a 0h</span>
+                    <h1 class="horarios">Horarios</h1>
+                    <span>12 a 16:30 y 20 a 0h</span>
+                    <span>Miércoles cerrado</span>
 
-                    <h1>Ubicación</h1>
+                    <h1 class="ubicacion">Ubicación</h1>
                     <span>Calle Antonio Machado Nº 6</span>
                     <span>Las Lagunas Mijas</span>
                     <span><a href="tel:+34951405206">95 140 52 06</a></span>
