--- a/webapp/index.html
+++ b/webapp/index.html
@@ -50,7 +50,7 @@
                     <span><a href="tel:+34951405206">95 140 52 06</a></span>
                     <span><a href="tel:+34633668663">633 668 663</a></span></div>
                 </div>
-                <div class="bottom overlay">
+                <div class="bottom overlay" onclick="hideOverlay(event)">
                   <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=-4.644121527671815%2C36.54413274530204%2C-4.641095995903016%2C36.545940670639695&amp;layer=mapnik&amp;marker=36.54503806004204%2C-4.642607242567465"></iframe>
                 </div>
               </div>
