--- a/webapp/index.html
+++ b/webapp/index.html
@@ -68,5 +68,7 @@
             <p>footer</p>
             <a href="http://lahuellamijas.com/">La Huella Mijas</a>
         </footer>
+        <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+        <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
     </body>
 </html>
